src/objects/Employee__c/fields/Current_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Time__c</fullName>
    <label>Current Time</label>
    <type>Time</type>
</CustomField>