src/objects/Employee__c/fields/Employee_Department__c.field-meta.xml
<CustomField>
    <fullName>Employee_Department__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Department</label>
    <type>Checkbox</type>
</CustomField>