src/objects/Employee__c/fields/Engineerig_percantege__c.field-meta.xml
<CustomField>
    <fullName>Engineerig_percantege__c</fullName>
    <label>Engineerig percantege</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>