src/objects/Employee__c/fields/Engineering_branch__c.field-meta.xml
<CustomField>
    <fullName>Engineering_branch__c</fullName>
    <label>Engineering branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chemcal</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>