src/objects/Employee__c/fields/Joining_date__c.field-meta.xml
<CustomField>
    <fullName>Joining_date__c</fullName>
    <label>Joining date</label>
    <type>Date</type>
</CustomField>