src/objects/Employee__c/fields/Why_you_like_this_Company__c.field-meta.xml
<CustomField>
    <fullName>Why_you_like_this_Company__c</fullName>
    <label>Why you like this Company</label>
    <type>TextArea</type>
</CustomField>